
Version (CVS)
-------------

XML: 	Fix the SourceGenerator to handle correctly the 'types' package when a Date/Time
	type is used as an attribute.(thanks to Maria Gray <maria.gray@datalex.ie>, Christopher P. van 		Buskirk <Chris.vanBuskirk@vanderbilt.edu> and Dean Thompson <dthompson@medebiz.net> for their 			proposed solutions) (Arnaud)

XML:    Removed a dependency to xerces jar in Configuration.java (Patch submitted by
        Marc-Antoine Parent <Marc-Antoine_Parent@Mitel.COM> and committed by
        Sebastien Gignoux <gignoux@intalio.com>)

XML: 	Fix a bug in the validation framework. (Arnaud)

XML:	Supports the <any> element in the Source Generator.(Arnaud)

XML:	Support the wildcards <any> and <anyAttribute> in the Schema Object Model.
        (Arnaud)

XML:    Added object container support. Handle element and attributes, as well
        as container in container. Object container are object that exist in the
        object model, but will not appear directly in the XML document. There
        will be no element associated to this object, but its child will appear
        in its parent element.
        (Sebastien Gignoux <gignoux@intalio.com>)


Version 0.9.2 March 28, 2001 - also includes version 0.9.1
----------------------------------------------------------

XML:    Added fix for collections, reported by Ozgur Balsoy. This bug was introduced
        on March 8th, in the version 1.45 of DescriptorSourceFactory. (kvisco)

XML:    Added fix for enumerated simpleTypes. When a simpleType restricted another
        simpleType, if both types defined an enumertion facet with the same value
        Castor wouldn't handle this properly. Bug reported by Stephan Goetter.
        (kvisco)

XML:    Added fix for generating source code using the element-method. Classes
        were no longer extending their abstract type definitions. (kvisco)

XML: 	Add a command line property for the Source Generator to use the generated files in